<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bc1"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="132dp">

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="246dp"
            android:layout_height="126dp"
            android:contentDescription="@string/hotel_s_logotype"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.515"
            app:srcCompat="@drawable/logo"
            tools:layout_conversion_absoluteHeight="213dp"
            tools:layout_conversion_absoluteWidth="339dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Галерея -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="419dp"
        android:layout_height="225dp">

        <ImageSwitcher
            android:id="@+id/imageSwitcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--    Галерея     -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/button_previous"
                android:layout_width="124dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:text="@string/previous_text" />

            <Button
                android:id="@+id/button_next"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:text="@string/next_text" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="11dp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:entries="@array/cities_list"
        tools:layout_conversion_absoluteHeight="30dp"
        tools:layout_conversion_absoluteWidth="258dp"
        tools:layout_editor_absoluteX="77dp"
        tools:layout_editor_absoluteY="117dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#9A020047"
        android:onClick="onBtnClick"
        android:text="@string/btn_text"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="379dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="157dp" />

    <TextView
        android:id="@+id/textAddress"
        android:layout_width="55dp"
        android:layout_height="7dp"
        android:text="@string/address_text"
        android:textSize="22sp"
        tools:layout_conversion_absoluteHeight="22dp"
        tools:layout_conversion_absoluteWidth="0dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="434dp" />

    <TextView
        android:id="@+id/text"
        android:layout_width="332dp"
        android:layout_height="121dp"
        android:text="@string/hello_text"
        android:textSize="18sp"
        tools:layout_conversion_absoluteHeight="32dp"
        tools:layout_conversion_absoluteWidth="106dp" />

    <Button
        android:id="@+id/nextButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#9A020047"
        android:onClick="onBtnNextClick"
        android:text="@string/btn_next_text" />

</LinearLayout>